[package]
name = "statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
crossterm = "0.26.1"
histogram = "0.7.3"
iter_num_tools = "0.7.1"
itertools = "0.11.0"
nalgebra = "0.32.3"
num-traits = { version = "0.2.15", features = ["i128"] }
ordered-float = "3.7.0"
rand = "0.8.5"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
